--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ dependencies = [
     "backoff>=2.2.1,<3.0.0",
     "faiss-cpu>=1.8.0.post1,<2.0.0",
     "litellm>=1.63.2,<2.0.0",
-    "numpy>=1.25.0,<2.0.0",
+    "numpy>=2.2.23.,<3.0.0",
     "pandas>=2.0.0,<3.0.0",
     "sentence-transformers>=3.4.1,<4.0.0",
     "tiktoken>=0.9.0,<1.0.0",
