--- a/docs/requirements-docs.txt
+++ b/docs/requirements-docs.txt
@@ -2,7 +2,7 @@ sphinx==7.3.7
 sphinx-rtd-theme==2.0.0
 
 backoff==2.2.1
-faiss-cpu==1.8.0.post1
+faiss-cpu==1.10.0
 litellm==1.63.2
 numpy==2.2.3
 pandas==2.2.3
