--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ classifiers = [
 
 dependencies = [
     "backoff>=2.2.1,<3.0.0",
-    "faiss-cpu>=1.10.0.post1,<2.0.0",
+    "faiss-cpu>=1.10.0,<2.0.0",
     "litellm>=1.63.2,<2.0.0",
     "numpy>=2.2.23,<3.0.0",
     "pandas>=2.2.3,<3.0.0",
